fix clipping of header

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,7 +3,12 @@
     min-height: min(100vh, 700px);
     padding: 88px 16px 16px 16px;
     position: relative;
-    overflow-x: hidden;
+}
+
+@media (min-width: 360px) and (max-width: 1024px) {
+    .header {
+        overflow-x: clip;
+    }
 }
 
 .header > :not(.children) {
